# scoopUI

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  TECH.md  electron.vite.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  workbench.config.json
.claude/: settings.json
.claude/agents/: architect.md  designer.md  developer.md  product-manager.md  qa.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/acceptance/: scoop-cli-reference.md
docs/architecture/api/: scoop-gui.md
docs/architecture/baseline/: scoop-gui.md
docs/prd/: glossary.md  project.md  roles.md
src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx  scoopConfig.ts  store.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  installer.rs  jobs.rs  lib.rs  main.rs  parse.rs  scoop.rs  settings.rs
src/components/: ConfirmDialog.tsx  DetailDialog.tsx  EmptyState.tsx  JobsPanel.tsx
src/main/: app-lifecycle.ts  index.ts  ipc-router.ts  progress-emitter.ts  window-manager.ts
src/pages/: BootView.tsx  BrowseView.tsx  BucketsView.tsx  ConfigView.tsx  InstalledView.tsx  LanguagePick.tsx  SettingsView.tsx
src/preload/: api.ts  index.ts
src/renderer/: index.html
src/shared/: enums.ts  i18n-keys.ts  ipc-contract.ts  ipc-result.ts  theme.ts
(+197 files in other folders)
